# nndl_capstone_2026

./: .gitignore  NNDL11. Representation Learning (1).pptx  Pitch_YMusic.pptx  README.md  REPORT.md  pitch.md  pyproject.toml
notebooks/: 00_kaggle_smoke.ipynb  01_baselines.ipynb  02_sasrec.ipynb  03_content_emb_prep.ipynb  04_hybrid.ipynb  05_fusion.ipynb  06_robustness.ipynb  07_report_figures.ipynb  RUN_ALL.ipynb
notebooks/executed/: 06_robustness.ipynb  RUN_ALL.ipynb
scripts/: baseline_itemknn.py  build_pdf.py  build_pitch_pdf.py  milestone0_mostpop.py  report_figures.py
src/ymrec/: __init__.py  config.py
src/ymrec/baselines/: __init__.py  item_knn.py  most_pop.py
src/ymrec/data/: __init__.py  embeddings.py  prep.py  sequences.py  yambda.py
src/ymrec/eval/: __init__.py  metrics.py  split.py
src/ymrec/models/: __init__.py  fusion.py  hybrid.py  sasrec.py
tests/: test_metrics.py
